--- a/app/src/main/res/menu/menu_transaction_detail.xml
+++ b/app/src/main/res/menu/menu_transaction_detail.xml
@@ -10,4 +10,7 @@
         android:id="@+id/action_delete_transaction"
         android:icon="@drawable/ic_delete" android:title="@string/delete" app:showAsAction="ifRoom"/>
 
+    <item android:id="@+id/nav_settings"
+        android:title="Settings"/>
+
 </menu>
